fix: link icon color in dark mode

--- a/src/styles/markdown.module.scss
+++ b/src/styles/markdown.module.scss
@@ -11,6 +11,10 @@
     font-style: italic;
 }
 
+.markdown_body svg path {
+    fill: consts.$text;
+}
+
 // TODO: maybe use custom font size for smaller things, too
 $font_size: 18px;
 
